<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_acknowledgement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/black"
            android:text="@string/acknowledgement"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_references" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_references"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/references"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_employment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_employment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/employment"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_education" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/personal_info"
            android:background="@color/black"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_background" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/education"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_personal_info"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/top_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/first_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo1"
        android:layout_width="164dp"
        android:layout_height="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/friend" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_your_name"
            android:layout_width="216dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:text="@string/your_name"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/logo1"
            app:layout_constraintStart_toStartOf="@+id/logo1"
            app:layout_constraintTop_toBottomOf="@+id/logo1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="282dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_your_name"
            app:layout_constraintStart_toStartOf="@+id/tv_your_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_your_name" />

</androidx.constraintlayout.widget.ConstraintLayout>